# electronics-shop-project

src/: item.py  phone.py
tests/: conftest.py  pyproject.toml  test_item.py  test_phone.py
tests/conftest.py/: fix.py
